--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,10 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile 'com.github.John-Weetaker:uuid-converter-db:v0.0.1-alpha'
 }
