--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,10 @@ gradle-app.setting
 *.war
 *.ear
 
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
